fix: keep field ordering